--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<table border="1" width="100%">
-		<tr></tr>
+	<table border="1" cellspacing="0">
+		
 		<thead>
 			<tr>
 				<th>Part</th>
@@ -23,7 +23,7 @@
 		</thead>
 		<tbody>
 			<tr>
-				<th>Waist</th>
+				<td>Waist</td>
 				<td>25</td>
 				<td>28</td>
 				<td>30</td>
@@ -31,7 +31,7 @@
 				<td>32</td>
 			</tr>
 			<tr>
-				<th>Chest</th>
+				<td>Chest</td>
 				<td>34</td>
 				<td>34</td>
 				<td>38</td>
@@ -47,7 +47,6 @@
 				<td>25</td>
 			</tr>
 		</tbody>
-		<tr></tr>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
